[package]
authors = ["edwardzcn-decade <edwardzcn98@gmail.com>"]
edition = "2021"
name = "hacker-news-worker-rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = {version = "0.8", default-features = false, features = ["json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tower-service = "0.3.3"
wasm-bindgen = "=0.2.106"
worker = {version = "0.7", features = ['http', 'axum']}
worker-macros = {version = "0.7", features = ['http']}
